--- a/source/_posts/翻墙.md
+++ b/source/_posts/翻墙.md
@@ -11,10 +11,10 @@ tags: GFW
 
 ## Gift card
 
-[点我得券](https://www.vultr.com/?ref=8257114)
+[点我得券](https://www.vultr.com/?ref=8267866)
 
 ## Use vultr
 
 点我直达：
 
-<a href="https://www.vultr.com/?ref=8257119-4F"><img src="https://www.vultr.com/media/banners/banner_800x418.png" width="800" height="418"></a>
+<a href="https://www.vultr.com/?ref=8267866"><img src="https://www.vultr.com/media/banners/banner_800x418.png" width="800" height="418"></a>
