--- a/source/_posts/11-27-随笔2019.md
+++ b/source/_posts/11-27-随笔2019.md
@@ -7,4 +7,19 @@ tags: 随笔
 
 ## 随笔20191127
 
-使用了 litten/hexo-theme-yilia 大牛主题
+1. 使用了 HEXO-THEME-HUHU 大牛主题，适配移动端设备。
+1. 微信访问需要使用浏览器打开
+1. Logo的配置项不生效，在构建结束后，发布前，使用脚本替换
+1. 评论等功能待填充
+
+1. Finally, I got this conversation.
+
+1. 《哥德尔、埃舍尔、巴赫——永恒的金带》——人工智能.
+   1. 正如标题所说，这本书交织地介绍了数理逻辑学家哥德尔、版画家埃舍尔和巴洛克作曲家巴赫，探索了三个伟人在不同领域中作品的共同理念。
+   1. 就像本书作者侯世达所说：“我认识到，哥德尔、埃舍尔和巴赫只是用不同的方式来表达一样相同的本质。
+   - Thoughts:
+     - 时间很公平，但命运各不相同，很多人可能被生活所迫，everybody gets busy to living or gets busy to dieing.
+     - 能如此困境中脱引而出的人，如同爱因斯坦、乔布斯、华人Zoom袁征，他们似乎有同样的fate，但最终不甘命运摆布。
+     - 大多人，迷失在世俗中，归咎于命运。
+     - 极少数人保持清醒，目标明确，屡败屡战。
+     - same life span, but different fate and lives.
