--- a/source/_posts/11-27-随笔2019.md
+++ b/source/_posts/11-27-随笔2019.md
@@ -9,10 +9,10 @@ tags: 随笔
 
 1. 使用了 HEXO-THEME-HUHU 大牛主题，适配移动端设备。
 1. 微信访问需要使用浏览器打开
-1. Logo的配置项不生效，在构建结束后，发布前，使用脚本替换
-1. 评论等功能待填充
+1. Logo的配置项不生效，在构建结束后，发布前，使用shell脚本替换
+1. 评论、统计、好友、标签、分类、代码块高亮等功能待完善
 
-1. Finally, I got this conversation.
+1. Finally, I got this conversation - 7month ago
 
 1. 《哥德尔、埃舍尔、巴赫——永恒的金带》——人工智能.
    1. 正如标题所说，这本书交织地介绍了数理逻辑学家哥德尔、版画家埃舍尔和巴洛克作曲家巴赫，探索了三个伟人在不同领域中作品的共同理念。
