--- a/source/_posts/11-26-前端方案.md
+++ b/source/_posts/11-26-前端方案.md
@@ -2,7 +2,10 @@
 layout: 前端方案
 title: 前端方案
 date: 2019-11-26 17:50:36
-tags: 前端方案
+tags:
+  - 前端方案
+categories:
+  - Frontend
 ---
 
 ## 可能是你见过最完善的微前端解决方案 #43
