--- a/source/_posts/11-27-随笔2019.md
+++ b/source/_posts/11-27-随笔2019.md
@@ -14,7 +14,7 @@ date: 2019-11-27 17:46:58
 1. 微信访问需要使用浏览器打开
 1. Logo的配置项不生效，在构建结束后，发布前，使用shell脚本替换
 1. 评论、统计、好友、标签、分类、代码块高亮等功能待完善
-
+<!-- more -->
 1. Finally, I got this conversation - 7month ago
 
 1. 《哥德尔、埃舍尔、巴赫——永恒的金带》——人工智能.
@@ -25,4 +25,4 @@ date: 2019-11-27 17:46:58
      - 能如此困境中脱引而出的人，如同爱因斯坦、乔布斯、华人Zoom袁征，他们似乎有同样的fate，但最终不甘命运摆布。
      - 大多人，迷失在世俗中，归咎于命运。
      - 极少数人保持清醒，目标明确，屡败屡战。
-     - same life span, but different fate and lives.
+     - same life, but different fate.
