--- a/source/_posts/12-04-it·me.md
+++ b/source/_posts/12-04-it·me.md
@@ -4,4 +4,6 @@ title: it·me
 date: 2019-12-04 11:15:46
 tags: photo
 ---
+## 危险级别排行
+<!-- more -->
 ![危险动物](https://ww3.sinaimg.cn/mw690/6b8f5d9cjw1egxdvt2ferj20hs0qon0w.jpg)
