--- a/source/_posts/12-04-前端状态管理博弈.md
+++ b/source/_posts/12-04-前端状态管理博弈.md
@@ -15,7 +15,7 @@ date: 2019-12-04 11:29:48
 Redux 的状态管理理念非常优雅，随之附带的时间旅行调试支持也非常酷炫。但这个特性是否是传说中的银弹，又会给使用者带来什么额外的负担呢？让我们重新思考一下吧。
 
 ## 什么是时间旅行
-
+<!-- more -->
 在 2015 年的 React Europe 会议上，Dan Abramov 展示了通过 Redux DevTools 让开发者在历史状态中自由穿梭，从而提升调试体验的 Demo，这个工具的使用体验非常惊艳，也取得了非常好的反响。在此之后，Vuex 与 MobX 等状态管理库也陆续在它们的调试工具中引入了对类似功能的支持。
 我们可以认为，前端状态管理领域中，狭义的『时间旅行』概念是在满足了下面这几个前提后，开发时在历史状态中任意回溯的功能：
 
