--- a/source/_posts/翻墙.md
+++ b/source/_posts/翻墙.md
@@ -10,7 +10,7 @@ date: 2019-09-17 10:56:06
 ---
 
 ## Out of The Great Fire Wall
-
+<!-- more -->
 ![vultr](https://www.vultr.com/media/logo_onwhite.png)
 
 ## Gift card
