--- a/source/_posts/11-26-前端方案.md
+++ b/source/_posts/11-26-前端方案.md
@@ -8,14 +8,11 @@ layout: 前端方案
 date: 2019-11-26 17:50:36
 ---
 
-## 可能是你见过最完善的微前端解决方案 #43
-
-原文地址：
-[阅读原文Ref：](https://github.com/kuitos/kuitos.github.io/issues/43)
+## 可能是你见过最完善的微前端解决方案
 
 ## 前言
 
-TL;DR
+<!-- more -->
 
 想跳过技术细节直接看怎么实践的同学可以拖到文章底部，直接看最后一节。
 
@@ -36,3 +33,6 @@ TL;DR
 独立运行时
 每个子应用之间状态隔离，运行时状态不共享
 微前端架构旨在解决单体应用在一个相对长的时间跨度下，由于参与的人员、团队的增多、变迁，从一个普通应用演变成一个巨石应用(Frontend Monolith)后，随之而来的应用不可维护的问题。这类问题在企业级 Web 应用中尤其常见。
+
+> 原文地址：
+> [阅读原文Ref：](https://github.com/kuitos/kuitos.github.io/issues/43)
