--- a/source/_posts/11-27-随笔2019.md
+++ b/source/_posts/11-27-随笔2019.md
@@ -25,4 +25,4 @@ date: 2019-11-27 17:46:58
      - 能如此困境中脱引而出的人，如同爱因斯坦、乔布斯、华人Zoom袁征，他们似乎有同样的fate，但最终不甘命运摆布。
      - 大多人，迷失在世俗中，归咎于命运。
      - 极少数人保持清醒，目标明确，屡败屡战。
-     - same life, but different fate.
+     - same life, different fate.
