--- a/source/_posts/11-26-前端方案.md
+++ b/source/_posts/11-26-前端方案.md
@@ -8,9 +8,9 @@ layout: 前端方案
 date: 2019-11-26 17:50:36
 ---
 
-## 可能是你见过最完善的微前端解决方案
+##### 可能是你见过最完善的微前端解决方案
 
-## 前言
+##### 前言
 
 <!-- more -->
 
@@ -22,7 +22,7 @@ date: 2019-11-26 17:50:36
 
 两个月前 Twitter 曾爆发过关于微前端的“热烈”讨论，参与大佬众多(Dan、Larkin 等)，对“事件”本身我们今天不做过多评论(后面可能会写篇文章来回顾一下)，有兴趣的同学可以通过这篇文章了解一二。
 
-## 微前端的价值
+##### 微前端的价值
 
 微前端架构具备以下几个核心价值：
 <!-- more -->
