--- a/source/_posts/11-27-随笔2019.md
+++ b/source/_posts/11-27-随笔2019.md
@@ -1,5 +1,5 @@
 ---
-title: 随笔2019
+title: 随笔2019.12.31
 tags:
   - blabla
 categories:
@@ -26,3 +26,50 @@ date: 2019-11-27 17:46:58
      - 大多人，迷失在世俗中，归咎于命运。
      - 极少数人保持清醒，目标明确，屡败屡战。
      - same life, different fate.
+
+##### 年终总结
+
+忙碌的一年里，在领导及各部门各同事的帮助下，我顺利的完成了本年度的工作。为了今后更好的工作，总结经验、完善不足，本人就本年度的工作总结如下：
+
+###### 取得的成绩
+
+1. AI营销管理系统
+   - 使用新Uiframe分别实现了「客户中心」、「总经理」、「渠道主管」页面功能及数据Mock
+2. QloudAuth
+   - 使用新UIframe 搭建qloud-auth项目
+   - 为平台提供了Auth管理页面，集成插件等主要功能
+   - 统一用户及权限管理服务，以应用、用户、角色和许可这四个实体为依托，相互关联实现身份管理系统的逻辑，使得身份管理明晰简单
+
+3. QloudWiki
+   - QloudWiki ，即文档管理服务
+   - 专为云服务提供文档管理
+   - 简单易用——作为Qlouddop产品的插件，用于各个项目中文档编辑、管理、查看
+   - 易读易写——使用Markdown语法编辑文档， Markdown 的目标是实现「易读易写」
+   - 角色分配——集成于Qloudauth及Qlouddop实现项目与角色控制
+   - 权限控制——通过Qloudauth实现读写权限控制，精确到项目文件目录控制
+   - 安全机制——通过非常规方式绕过用户验证和权限验证的方式都将被拦截
+   - Git文档托管——使用Git作为文档托管平台
+
+4. QloudITG
+   - 是一个灵活的、现代化的 IT 治理平台
+   - 在 QloudITG 中，所有需要管理和治理的实体均称为资产，例如服务、配置、API、流程定义、容器镜像等
+   - 资产类型管理：资产的模型元数据，定义资产类型及资产包含的属性：编辑方式、存储方式等。
+   - 资产登记审计管理：新增或编辑具体的资产的属性信息，记录资产属性信息的所有变化。
+   - 资产生命周期管理：管理资产的状态，创建、提交、审核、发布、归档等。
+   - 资产血缘关联管理：管理资产与资产之间的关联关系，关联关系支持图形化展示。
+   - 资产存储服务管理：管理资产物件的存储服务，如 QloudRepos, QloudDocs 等。
+   - 资产标签管理：通用标签及自定义标签，通用标签由资产类型决定，自定义标签由资产登记时编辑
+
+5. QloudAlgo
+   - 为Alogo平台提供支持，重构了UI及实现了新功能，包含一下功能
+   - 算法管理
+   - 模型管理
+   - 资源数据管理
+   - 作业管理
+
+6. QloudExp
+   - QmsExp是一个基于qloudbit的服务，监听KAFKA的异常队列TOPIC，把发到异常TOPIC的消息捕获，并且存储到数据库mariadb，对外提供restapi接口，实现分页查询的功能。Qloudexpui则通过Qmsexp提供的接口对收集到的异常进行分页展示和生成格式化后数据，并提供复制的功能
+
+7. QloudHermes
+   - QloudHermes是一个依赖Kafka构建的快速、可靠的消息代理，UI界面。
+   - 通过Qloudhermes,UI界面发布端 发布消息, Qloudhermes就能将消息推送至订阅消息的服务器地址
