--- a/source/_posts/01-15-托福复习计划日志.md
+++ b/source/_posts/01-15-托福复习计划日志.md
@@ -2,11 +2,13 @@
 title: 托福复习计划日志
 date: 2020-01-15 15:41:55
 tags:
+    - 托福
+categories: 托福
 ---
 
-##### 复习计划 1.15
+##### 复习计划 1.16
 
-- [ ] 4:00-4:30 单词闯关25关
+- [ ] 4:00-4:30 单词闯关10关
 - [ ] 4:30-5:00 听力录播课程1
 - [ ] 5:05-5:30 整理笔记
 - [ ] 5:30-6:30 回家+吃饭
