update TOEFL review plan

--- a/source/_posts/01-15-托福复习计划日志.md
+++ b/source/_posts/01-15-托福复习计划日志.md
@@ -6,9 +6,9 @@ tags:
 categories: 托福
 ---
 
-##### 复习计划 1.16
+##### 复习计划 1.17
 
-- [ ] 4:00-4:30 单词闯关10关
+- [x] 4:00-4:30 单词闯关25关
 - [ ] 4:30-5:00 听力录播课程1
 - [ ] 5:05-5:30 整理笔记
 - [ ] 5:30-6:30 回家+吃饭
