--- a/source/_posts/01-15-托福复习计划日志.md
+++ b/source/_posts/01-15-托福复习计划日志.md
@@ -6,10 +6,10 @@ tags:
 categories: 托福
 ---
 
-##### 复习计划 1.17
+##### 复习计划 1.19
 
-- [x] 4:00-4:30 单词闯关25关
-- [ ] 4:30-5:00 听力录播课程1
+- [ ] 4:00-4:30 单词闯关25关
+- [x] 4:30-5:00 听力录播课程1
 - [ ] 5:05-5:30 整理笔记
 - [ ] 5:30-6:30 回家+吃饭
 - [ ] 6:30-7:30 作业——精听联系一篇
