--- a/source/_posts/01-15-托福复习计划日志.md
+++ b/source/_posts/01-15-托福复习计划日志.md
@@ -18,3 +18,7 @@ categories: 托福
 - [ ] 9:00-9:30 课后作业，阅读一篇
 - [ ] 9:30-10:00 整理TPO及PDF文档
 - [ ] 10:00-10:30 TPO精听1篇-笔记
+
+###### appendix
+
+- 安哥鲁萨克逊民族的土地，在法语里就是。Angleterre，这就是为什么他在英语里和法语，你会如此不同。
