--- a/source/_posts/01-15-托福复习计划日志.md
+++ b/source/_posts/01-15-托福复习计划日志.md
@@ -8,7 +8,7 @@ categories: 托福
 
 ##### 复习计划 1.17
 
-- [x] 4:00-4:30 单词闯关25关
+- [ ] 4:00-4:30 单词闯关25关
 - [ ] 4:30-5:00 听力录播课程1
 - [ ] 5:05-5:30 整理笔记
 - [ ] 5:30-6:30 回家+吃饭
