--- a/source/_posts/01-15-托福复习计划日志.md
+++ b/source/_posts/01-15-托福复习计划日志.md
@@ -22,3 +22,10 @@ categories: 托福
 ###### appendix
 
 - 安哥鲁萨克逊民族的土地，在法语里就是。Angleterre，这就是为什么他在英语里和法语，你会如此不同。
+
+- suddenly I realized there are so many people who are defined by others. They are so self-conscious and they don't even know what they really want to be. These feelings just coming up to me all of a sudden.
+- Déjà vu
+- I hate these feelings because it's too late somehow I don't even wanna it.
+- Why are you so self-conscious
+- I hate anyone tried to defined me from now on it will not make me to be a hater
+- but It will make me to be myself
