--- a/source/_posts/01-15-托福复习计划日志.md
+++ b/source/_posts/01-15-托福复习计划日志.md
@@ -13,7 +13,7 @@ categories: 托福
 - [ ] 5:05-5:30 整理笔记
 - [ ] 5:30-6:30 回家+吃饭
 - [ ] 6:30-7:30 作业——精听联系一篇
-- [x] 7:40-8:10 阅读1录播课
+- [ ] 7:40-8:10 阅读1录播课
 - [ ] 8:20-8:50 笔记
 - [ ] 9:00-9:30 课后作业，阅读一篇
 - [ ] 9:30-10:00 整理TPO及PDF文档
