--- a/source/_posts/01-13-托福写作.md
+++ b/source/_posts/01-13-托福写作.md
@@ -7,26 +7,28 @@ tags:
 categories: 托福
 ---
 
-###### 背诵篇-1
+###### 住在大城市更能照顾好家人
 
 - 住在大城市更能照顾好家人
 
 In large cities, there are more convenient facilities offered than in the countryside. There is an ample supply of daily necessities in urban districts. The advanced network of public transport makes it easier for people to commute to different locations, including shopping malls, parks and restaurants, etc. Medical care is also more accessible, with hospitals being set up on all corners of the city. Thus, health problems could be addressed in a timely manner. Meanwhile, there are many places for recreation in big cities so that the whole family can spend enjoyable times together.
 
-##### 背诵篇-2
+##### 人为什么应该用自己的知识去解决问题，而不是依赖别人
 
 - 人为什么应该用自己的知识去解决问题，而不是依赖别人
 
 Furthermore, using one's own knowledge to solve a problem is a precious opportunity to conduct self assessment. Doubtlessly, self-evaluation is a necessary premise of one's personal progress and overall development. During the course of searching for the answer, one is granted the chance to use what has been learnt and judge if his knowledge base is solid enough to handle difficulties in real life. Discovering one's defects is also a critical step forward. After all, how could an individual obtain his success without a thorough test of himself? Therefore, overcoming a problem totally on one's own could be a meaningful way to receive objective feedbacks of his personal ability and quality.
 
-##### 背诵篇-3
+##### 为什么电视转播比现场表演更好看
 
 - 为什么电视转播比现场表演更好看
+
 First of all, a large crowd present at an event makes the environment too noisy to bear. I once attended a live concert held by a famous singer in a city stadium. A group of fans who travelled all the way from another city was seated right behind me. They appeared to be so crazy about their idol that whenever this star began to sing, they went all out to scream out his name, and became excited to tears. Thus, other members of the audience and I were unable to hear a word. Our ears were also suffering from other noises around us. Since then, I have not been to any live performances. By contrast, the environment at home is much more peaceful and comfortable. With a cup of tea in my hand, I can enjoy the performance on TV to my heart's content.
 
-##### 背诵-4
+##### 机器制品比手工制品有优势
 
 - 机器制品比手工制品有优势？
+
 In the first place, volume production considerably cuts down the prices of items made by machine. Advanced technology should be the major contributor to the enhanced productivity of modern industry. The installation of machines enables factories to produce more at higher speed. Thus, the costs have been brought down to a large degree. Consumers might be able to buy them at reasonable prices. By contrast, hand-made items like clothes and furniture require much more energy and time for manufacture. Inevitably, people have to pay more for it. Nowadays, the number of wise consumers is on the rise. Very few of them are willing to select more expensive goods. Thereafter, machine-made commodities, which are mostly cheaper, might become the first choice.
 
 ###### 独立写作-套用仿写
