托福写作-朗读2

--- a/source/_posts/06-19-托福写作-朗读2.md
+++ b/source/_posts/06-19-托福写作-朗读2.md
@@ -7,4 +7,18 @@ tags:
 categories: 托福
 ---
 
-##### 背诵-1
+##### 教育的意义
+
+Education is one of the most important tools that the society possesses. The right implementation of this tool is one of the greatest ways of assuring the quality of life within a society. At its most basic definition, education is nothing more than the teaching of ideas. The early stages of schooling instill more attitude and social skills than knowledge. As the age and skill level of the student increases, more education is based upon the interest of the student.
+
+##### 学校有没有必要存在
+
+School education always is, and will remain, essential for children's upbringing, because it is not only a platform to impart knowledge but also a stage to educate an individual about values and attitudes, rights and wrongs, goods and evils. At school, children, encouraged by their teachers and accompanied by their peers, can benefit in a wider range. They are more likely to be sociable and outgoing, cooperative and tolerant. On the other hand, the Internet can hardly serve these functions. Even if it provides information about role samples, about moral classes, it is not up to children to choose from these "goods" and those unsuitable "evils" online, for children are not mature enough to make a good judgment and their parents, always busy working,  are absent from home.
+
+##### 教室外教育的重要性
+
+Secondly, outdoor education may provide ample opportunities for the students to turn the assimilated knowledge into practice. Theories are only valuable after being used in reality. The limitation of classroom teaching is getting more and more apparent than ever. People are gradually aware of the possible growth of doctrinairism that threatens the efficiency and importance of indoor education. A most popular trend among college students is to take part- time jobs after class. It is not merely a means of earning money, but an effective way to use knowledge in real life. They may become teachers, tour guides or even designers in some companies. This mode of education prepares them for future career. Therefore, We should never underestimate its significance.
+
+##### 作业重要吗
+
+Primarily, homework helps the students to review what has been learned and prepare for the new. Needless to say, a period of time is needed to carefully digest the accumulated knowledge. Doing homework is an effective way to assimilate knowledge. Through having a suitable amount of exercises and memorizing tasks, further comprehension is obtained. Afterwards, a brief preview familiarizes the students with the new knowledge, thus making it easier for them to understand what will be taught the next day. According to a report from a major education website, over 90% of high school teachers assign homework every day. Many of them agree that students who can actively complete their homework are more able to make progress in their studies.
