托福写作-朗读3

--- a/source/_posts/06-19-托福写作-朗读3.md
+++ b/source/_posts/06-19-托福写作-朗读3.md
@@ -9,7 +9,7 @@ categories: 托福
 
 ##### 小孩为什么要尽早学外语
 
-In the first place, childhood is the best period for language learning. Research indicates that the brains of children are in a superior state to grasp the essences of a language. With a faster reaction speed and better memories, it can be much easier for them to assimilate basic grammatical points and remember new words and phrases. What's more, children are extremely good at imitating others. Thus, by listening to recorded texts, they can follow the speaker in the tape and imitate the voice repeatedly. As time goes by, they will gradually speak what has been stored in their mind. As soon as they have accumulated enough vocabulary and expressions, they may use them bravely in spite of possible mistakes. These are all key elements that lead to progress in learning a language. Such a learning process is more effective in children than in
+In the first place, childhood is the best period for language learning. Research indicates that the brains of children are in a superior state to grasp the essences of a language. With a faster reaction speed and better memories, it can be much easier for them to assimilate basic grammatical points and remember new words and phrases. What's more, children are extremely good at imitating others. Thus, by listening to recorded texts, they can follow the speaker in the tape and imitate the voice repeatedly. As time goes by, they will gradually speak what has been stored in their mind. As soon as they have accumulated enough vocabulary and expressions, they may use them bravely in spite of possible mistakes. These are all key elements that lead to progress in learning a language. Such a learning process is more effective in children than in adults.
 
 ##### 网络也给学生带来坏习惯
 
