托福写作-独立范文-加分句

--- a/source/_posts/06-19-托福写作-思路拓宽1-对比类.md
+++ b/source/_posts/06-19-托福写作-思路拓宽1-对比类.md
@@ -48,3 +48,17 @@ categories: 托福
 4. Some people think that it is an important part of a child’s education to go on field trips (for example, museums), other people think a child’s time is better spent learning in a classroom at school. What is your opinion?
 
 5. Do you agree or disagree with the following statement: it's better to make friends with intelligent people than with people who have a sense of humor?
+
+---
+
+##### 母题库
+
+1. Do you agree or disagree with the statement? To remain happy and optimistic when you fail is more important than achieving success.
+
+1. Do you agree or disagree with the following statement? Children rely too much on the technology, like computers, smart phones, video games for fun and entertainment. Playing simpler toys or playing outside with friends would be better for children’s development.
+
+1. Do you agree or disagree with the following statement? Students should be encouraged to study those filed like science, technology, engineering, and math(STEM) rather than they have interest in.
+
+1. . Do you agree or disagree with the following statement: Some people think that it is an important part of a child’s education to go on field trips (for example, museums), other people think a child’s time is better spent learning in a classroom at school. What is your opinion?
+
+1. . Do you agree or disagree with the following statement? The government should spend money helping more people access the Internet instead of improving public transportation.
