--- a/source/_posts/06-19-托福写作-思路拓宽2-单一观点类.md
+++ b/source/_posts/06-19-托福写作-思路拓宽2-单一观点类.md
@@ -51,3 +51,17 @@ categories: 托福
 1. Some people like to buy and eat their meals at restaurants frequently, while others like to do this at home. Which do you prefer? Why?
 
 1. Some people think that we should keep away from others to improve our relationship, because being away from people reminds us of how important they are. Others think we should always stay with others to have good relationship because we can communicate with them more often. What do you think?
+
+---
+
+##### 母题库
+
+1. Do you agree or disagree with the following statement? The more money people have, the more they should give away to charity.
+
+1. Do you agree or disagree with the following statement? It is often not a good thing for people to move to a new town or a new country because we may lose our old social connection.
+
+1. Do you agree or disagree with the following statement? Some people think that some lessons for young children (age 5-8) which include video games can serve as effective and interesting ways of learning, while others think that these lessons are quite distracting and can be seen as a waste of time. What is your opinion and why?
+
+1. Do you agree or disagree with the following statement: People should be open to new ideas and change their minds to be successful.
+
+1. Do you agree or disagree with the following statement? Young people should take several different kinds of jobs before they decide which career to pursue in the long term.
