--- a/source/_posts/06-19-托福写作-思路拓宽4-三选一类.md
+++ b/source/_posts/06-19-托福写作-思路拓宽4-三选一类.md
@@ -12,26 +12,50 @@ categories: 托福
 重点机经36-40
 
 1. Which one of the reason is most important in helping students to study in colleges and universities?
-    A. Having access to the university tutors who can provide individual instruction for the students who have difficulty in study.
-    B. Having the help and encouragement from the family and friends.
-    C. Having excellent teachers in high-school who can help the students before the university.
+    - Having access to the university tutors who can provide individual instruction for the students who have difficulty in study.
+    - Having the help and encouragement from the family and friends.
+    - Having excellent teachers in high-school who can help the students before the university.
 
 1. Some teenagers are free in the evenings or have days off at school, which way can bring them the most benefit?
-    1. accumulating work experience by a part-time job or volunteering in a community
-    2. learning to play a sport
-    3. learning to play a musical instrument
+    - accumulating work experience by a part-time job or volunteering in a community
+    - learning to play a sport
+    - learning to play a musical instrument
 
 1. Which one of the following values is the most important to share with a young child(5-10 years old)?
-    1. being helpful
-    2. Being honest
-    3. Being well organized
+    - being helpful
+    - Being honest
+    - Being well organized
 
 1. In times of economic crisis, in which field do you think the government can cut financial support?
-   1. Art
-   2. Scientific research
-   3. Parks and public gardens
+   - Art
+   - Scientific research
+   - Parks and public gardens
 
 1. The university club wants to help others but they can only choose one project a year. If you are a member of them, which one of the following do you think is the best to choose?
-   1. help young students in a nearby primary school with reading and mathematics;
-   2. help people who have no place to live to find new houses for rent;
-   3. visit and assist elderly people with daily tasks.
+   - help young students in a nearby primary school with reading and mathematics;
+   - help people who have no place to live to find new houses for rent;
+   - visit and assist elderly people with daily tasks.
+
+##### 母题库
+
+1. What do you think is the most important ability for a high school teacher:
+    - The ability to give good advice to students about their future plan;
+    - The ability to help students solve their problems;
+    - The ability to encourage students to study by themselves about the outside world.
+
+1. A school has been funding different after-school activities, but this year, because of the lack of money, the school will only fund one activity, which one do you think the school should fund: sports, art or volunteering?
+
+1. Do you agree or disagree with the following statement? To improve health, which of the following aspect in life would you like to make a change:
+    - Kinds of food to eat
+    - The amount of exercise
+    - The amount of stress
+
+1. What is the most useful way for people to help protect or improve the environment in their local communities?
+    - Plant trees and create parks;
+    - Persuade local shops to stop providing plastic bags for customers;
+    - Increase access to public transportation (such as buses and trains) in order to reduce the number of automobiles on the road
+
+1. What is the most important action for government to take for the protection of environmental problems?
+    - fund research on new energy sources such as solar and wind power
+    - protect forests and natural wildlife species
+    - pass and enforce laws to reduce the pollution.
