--- a/source/_posts/06-19-托福写作-加分句40句.md
+++ b/source/_posts/06-19-托福写作-加分句40句.md
@@ -7,416 +7,407 @@ tags:
 categories: 托福
 ---
 
+##### 托福加分句
 
 1. It is a must for sb to do sth ... 必须做... 【真题重现】:
 
-Should all teachers be required to take courses every five years to
-update their
+    Should all teachers be required to take courses every five years to
+    update their
 
-knowledge? 【真题运用】:
+    knowledge? 【真题运用】:
 
-It is a must for politics teachers to join in related courses to update
-their former storage of knowledge.
+    It is a must for politics teachers to join in related courses to update
+    their former storage of knowledge.
 
 1. Be bound to ... 必然会... 【真题重现】:
 
-Should parents help to determine the future of their children?
+    Should parents help to determine the future of their children?
 
-【真题运用】:
+    【真题运用】:
 
-Such an impetus is bound to be powerful and effective.
+    Such an impetus is bound to be powerful and effective.
 
 1. Under the instructions of ... 在...的指导下 【真题重现】:
 
-Helping students gain self-confidence or teaching specific knowledge? 【真
-题运用】:
+    Helping students gain self-confidence or teaching specific knowledge? 【真
+    题运用】:
 
-Under the instructions of their teachers in class, students can obtain a
-thorough understanding of what has been printed in the textbooks.
-
-
+    Under the instructions of their teachers in class, students can obtain a
+    thorough understanding of what has been printed in the textbooks.
 
 1. The real looks of ... ....的真面目 【真题重现】:
 
-Should university students be required to take at least one course that
-teaches them the culture of a country rather than their own?
+    Should university students be required to take at least one course that
+    teaches them the culture of a country rather than their own?
 
-【真题运用】:
+    【真题运用】:
 
-It vividly demonstrates the fact that only from a different angle could a
-person
+    It vividly demonstrates the fact that only from a different angle could a
+    person
 
-obtain the real looks of his own surroundings.
+    obtain the real looks of his own surroundings.
 
 1. A significant step toward ... 向...迈出一大步 【真题重现】:
 
-Working 3 days a week with long hours or working 5 days a week with short
-hours?
+    Working 3 days a week with long hours or working 5 days a week with short
+    hours?
 
-【真题运用】:
+    【真题运用】:
 
-These are all positive phenomenon that mark a significant step toward
-social
+    These are all positive phenomenon that mark a significant step toward
+    social
 
-progress.
+    progress.
 
 1. Be paved with ... 由...铺成 【真题重现】:
 
-In order to achieve happiness for yourself, you have to try to make other
-people happy?
+    In order to achieve happiness for yourself, you have to try to make other
+    people happy?
 
-【真题运用】:
+    【真题运用】:
 
-The way leading toward everlasting happiness is paved with endless
-efforts to make others happy.
+    The way leading toward everlasting happiness is paved with endless
+    efforts to make others happy.
 
 1. Be blamed for ... 因...受到责备
 
- 【真题重现】:
+    【真题重现】:
 
-Should people have hobbies and do physical activities different from
-their work?
+    Should people have hobbies and do physical activities different from
+    their work?
 
-【真题运用】:
+    【真题运用】:
 
-Under such adverse circumstances, nobody could be blamed for feeling
+    Under such adverse circumstances, nobody could be blamed for feeling
 
-overwhelmed.
+    overwhelmed.
 
 1. Do one’s utmost to ... 尽最大努力去做... 【真题重现】:
 
-Should advertisements targeting children aged between 2 and 5 be banned?
-【真题运用】:
+    Should advertisements targeting children aged between 2 and 5 be banned?
+    【真题运用】:
 
-In most cases, they would do their utmost to persuade their parents to
-buy their dream objects like expensive toys, snacks and drinks.
+    In most cases, they would do their utmost to persuade their parents to
+    buy their dream objects like expensive toys, snacks and drinks.
 
 1. heavily loaded with... 负载过量的... 【真题重现】:
 
-Is it difficult for people to know whom to believe or who is telling the
-truth because of so many sources of information?
+    Is it difficult for people to know whom to believe or who is telling the
+    truth because of so many sources of information?
 
-【真题运用】:
+    【真题运用】:
 
-Heavily loaded with mountains of information from the advanced network of
+    Heavily loaded with mountains of information from the advanced network of
 
-mass media, modern citizens are facing unprecedented psychological
-pressure.
+    mass media, modern citizens are facing unprecedented psychological
+    pressure.
 
 1. There is no need to ... 没必要做... 【真题重现】:
 
-Has technology made children less creative than they were in the past?
+    Has technology made children less creative than they were in the past?
 
- 【真题运用】:
+    【真题运用】:
 
-In their eyes, technology has advanced to such a large extent that there
-is no
+    In their eyes, technology has advanced to such a large extent that there
+    is no
 
-need to use their own brain to overcome difficulties.
+    need to use their own brain to overcome difficulties.
 
 1. Deprive ... Of ... 剥夺;使...丧失 【真题重现】:
 
-Is one's working more important than being with one's family? 【真题运用】:
+    Is one's working more important than being with one's family? 【真题运用】:
 
-Indeed, the fast pace of modern life has deprived citizens of more
-leisure time to spend with their family outside of work.
+    Indeed, the fast pace of modern life has deprived citizens of more
+    leisure time to spend with their family outside of work.
 
 1. Be associated with ... 与...相关 【真题重现】:
 
-Won't students use printed books any more in 20 years?
+    Won't students use printed books any more in 20 years?
 
-【真题运用】:
+    【真题运用】:
 
-Among the four great inventions in China's history, two of them are
-associated
+    Among the four great inventions in China's history, two of them are
+    associated
 
-with books.
+    with books.
 
 1. Bring ... to the limelight 使...成为注目的焦点 【真题重现】:
 
-Be more like others or be different from everyone else? 【真题运用】:
+    Be more like others or be different from everyone else? 【真题运用】:
 
-Definitely, the concrete determination to be unique brings a pioneer to
-the limelight.
+    Definitely, the concrete determination to be unique brings a pioneer to
+    the limelight.
 
 1. Be blessed with ... 享有...
 
-【真题重现】:
+    【真题重现】:
 
+    Does telephone have greater influence on people's lives than TV? 【真题运
+    用】:
 
-
-Does telephone have greater influence on people's lives than TV? 【真题运
-用】:
-
-With the simple dialing of numbers, a person is blessed with the
-opportunity to speak to a friend far away and hear his voice directly
-through the telephone.
+    With the simple dialing of numbers, a person is blessed with the
+    opportunity to speak to a friend far away and hear his voice directly
+    through the telephone.
 
 1. Excessive obsession with ... 过分沉迷于... 【真题重现】:
 
-Are most business people motivated only by the desire for money?
+    Are most business people motivated only by the desire for money?
 
-【真题运用】:
+    【真题运用】:
 
-Such excessive obsession with moneymaking may incur unhealthy competition
+    Such excessive obsession with moneymaking may incur unhealthy competition
 
-and pose a threat to the fairness of the whole market.
+    and pose a threat to the fairness of the whole market.
 
 1. Well informed about ... 对...有深入的了解 【真题重现】:
 
-Is it desirable to know events from all over the world? 【真题运用】:
+    Is it desirable to know events from all over the world? 【真题运用】:
 
-The advanced network of mass media today has kept people well informed
-about what is going on in all corners of the earth.
+    The advanced network of mass media today has kept people well informed
+    about what is going on in all corners of the earth.
 
 1. Keep a blind eye to ... 对...视而不见 【真题重现】:
 
-People buy things not because they need them, but because others buy them?
+    People buy things not because they need them, but because others buy them?
 
-【真题运用】:
+    【真题运用】:
 
-Under such circumstances, people seem to keep a blind eye to whatever the
-others are pursuing.
+    Under such circumstances, people seem to keep a blind eye to whatever the
+    others are pursuing.
 
 1. Lay the foundation for ... 为...打下基础
 
+    【真题重现】:
 
+    Should children play and study rather than learn how to do household
+    chores?
 
- 【真题重现】:
+    【真题运用】:
 
-Should children play and study rather than learn how to do household
-chores?
+    From the medical angle, it is widely acknowledged that children's brains
+    are the quickest to assimilate new knowledge and thus this stage of life
+    lays the foundation for their future education.
 
-【真题运用】:
+1. Come into one’s mind 使...想起; 进入...的脑海
+    【真题重现】: Watching a
+    movie: in a cinema or at home?
 
-From the medical angle, it is widely acknowledged that children's brains
-are the quickest to assimilate new knowledge and thus this stage of life
-lays the foundation for their future education.
+    【真题运用】:
 
-1. Come into one’s mind 使...想起; 进入...的脑海 【真题重现】: Watching a
-movie: in a cinema or at home?
+    A familiar scene would come into people's mind whenever the cinema is
 
-【真题运用】:
-
-A familiar scene would come into people's mind whenever the cinema is
-
-mentioned: comfortably seated before the wide silver screen.
+    mentioned: comfortably seated before the wide silver screen.
 
 1. Endeavor to ...尽力做... 【真题重现】:
 
-Buy a house or a business? 【真题运用】:
+    Buy a house or a business? 【真题运用】:
 
-Cherishing this faith, most business owners would endeavor to cultivate
-their minds and steel their personalities.
+    Cherishing this faith, most business owners would endeavor to cultivate
+    their minds and steel their personalities.
 
 1. Stimulus 激励;刺激 【真题重现】:
 
-Do grades encourage students to learn?
+    Do grades encourage students to learn?
 
-【真题运用】:
+    【真题运用】:
 
+    In a sense, pursuing high grades is indeed an essential stimulus for
+    students to concentrate on their textbooks.
 
+1. held in the palm of his own hand. 被掌握在某人手中
 
- In a sense, pursuing high grades is indeed an essential stimulus for
- students to concentrate on their textbooks.
+    【真题重现】: What can
+    help you to succeed?
 
-1. held in the palm of his own hand. 被掌握在某人手中 【真题重现】: What can
-help you to succeed?
+    【真题运用】:
 
-【真题运用】:
+    The success stories of numerous world-renowned celebrities justify the
+    idea that
 
-The success stories of numerous world-renowned celebrities justify the
-idea that
-
-one's bright future is held in the palm of his own hand.
+    one's bright future is held in the palm of his own hand.
 
 1. immerse oneself in ... 沉浸于...;埋头苦干
 
-【真题重现】:
+    【真题重现】:
 
-Is it more important to work quickly with risks making mistakes than to
-work
+    Is it more important to work quickly with risks making mistakes than to
+    work
 
-slowly with everything correct? 【真题运用】:
+    slowly with everything correct? 【真题运用】:
 
-Immersing himself in the task at hand can help him avoid careless
-mistakes.
+    Immersing himself in the task at hand can help him avoid careless
+    mistakes.
 
 1. be of top priority ...是最重要的
 
-【真题重现】:
+    【真题重现】:
 
-Should the government focus more on preserving natural environment and
-less
+    Should the government focus more on preserving natural environment and
+    less
 
-on economic development? 【真题运用】:
+    on economic development? 【真题运用】:
 
-To begin with, as the foundation of society, economy is of top priority
-in all nations.
+    To begin with, as the foundation of society, economy is of top priority
+    in all nations.
 
 1. be obliged to... 有义务做...
 
+    【真题重现】:
 
+    Are some scientists responsible for the negative impacts made by their
 
- 【真题重现】:
+    discoveries? 【真题运用】:
 
-Are some scientists responsible for the negative impacts made by their
-
-discoveries? 【真题运用】:
-
-For instance, before a new discovery is put to use for human needs, the
-discoverer is obliged to formulate official instructions which must
-include the most detailed introduction
+    For instance, before a new discovery is put to use for human needs, the
+    discoverer is obliged to formulate official instructions which must
+    include the most detailed introduction
 
 1. for fear of... 为了避免;唯恐 【真题重现】:
 
-Is advertising the main cause of unhealthy eating habits?
+    Is advertising the main cause of unhealthy eating habits?
 
-【真题运用】:
+    【真题运用】:
 
-For fear of putting on weight, an increasing number of people have joined
-a
+    For fear of putting on weight, an increasing number of people have joined
+    a
 
-shared mission to become slimmer.
+    shared mission to become slimmer.
 
 1. Prerequisite 前提;先决条件 【真题重现】:
 
-Does playing sports teach us about life? 【真题运用】:
+    Does playing sports teach us about life? 【真题运用】:
 
-Indeed, motion is the prerequisite of life, without which all living
-beings would perish and the whole universe would no longer exist.
+    Indeed, motion is the prerequisite of life, without which all living
+    beings would perish and the whole universe would no longer exist.
 
 1. from all walks of life 来自各行各业的 【真题重现】:
 
-Are environmental issues too complex to be handled by the individual?
+    Are environmental issues too complex to be handled by the individual?
 
-【真题运用】:
+    【真题运用】:
 
 
 
- Hence, people from all walks of life, young and old, poor and rich,
- should offer to join in the campaign against environmental hazards.
+    Hence, people from all walks of life, young and old, poor and rich,
+    should offer to join in the campaign against environmental hazards.
 
 1. bring into full play 充分发挥(作用) 【真题重现】:
 
-The most important things for governments to do to improve health care.
+    The most important things for governments to do to improve health care.
 
-【真题运用】:
+    【真题运用】:
 
-With increased public awareness, all these essential elements can be
-taken into
+    With increased public awareness, all these essential elements can be
+    taken into
 
-account and brought into full play.
+    account and brought into full play.
 
 1. Facilitate 促进;帮助 【真题重现】:
 
-The only way the government can conserve energy. 【真题运用】:
+    The only way the government can conserve energy. 【真题运用】:
 
-One of these effective methods is to facilitate the replacement of
-non-renewable resources with renewable energy.
+    One of these effective methods is to facilitate the replacement of
+    non-renewable resources with renewable energy.
 
 1. Exert...on... 把...强加于...之上 【真题重现】:
 
-Were people friendlier in the past than they are today?
+    Were people friendlier in the past than they are today?
 
-【真题运用】:
+    【真题运用】:
 
-Besides, the fierce competition in today's society exerts so much
-pressure on
+    Besides, the fierce competition in today's society exerts so much
+    pressure on
 
-people that there is no time for them to show friendliness.
+    people that there is no time for them to show friendliness.
 
 1. Ensue 接着发生 【真题重现】:
 
-Choosing a subject that interests you or one preparing you for a better
-job or career?
+    Choosing a subject that interests you or one preparing you for a better
+    job or career?
 
 
 
- 【真题运用】:
+    【真题运用】:
 
-Whenever a new theory in biology is grasped, another cheerful moment
-ensues.
+    Whenever a new theory in biology is grasped, another cheerful moment
+    ensues.
 
 1. Shoulder 肩负 【真题重现】:
 
-Do some people like to spend time alone when relaxing? 【真题运用】:
+    Do some people like to spend time alone when relaxing? 【真题运用】:
 
-Today, in most enterprises, employees shoulder heavy responsibilities
-during office hours.
+    Today, in most enterprises, employees shoulder heavy responsibilities
+    during office hours.
 
 1. Boast 取得;拥有
 
-【真题重现】:
+    【真题重现】:
 
-Are students more influenced by their teachers than by their friends?
+    Are students more influenced by their teachers than by their friends?
 
-【真题运用】:
+    【真题运用】:
 
-In the eyes of many students, teachers boast absolute authority in
-education.
+    In the eyes of many students, teachers boast absolute authority in
+    education.
 
 1. Backup 支持 【真题重现】:
 
-Should the most important education for students be conducted in the
-classroom, but not out of the classroom?
+    Should the most important education for students be conducted in the
+    classroom, but not out of the classroom?
 
-【真题运用】:
+    【真题运用】:
 
-To a certain degree, education outside the classroom can be regarded as
-the powerful backup of classroom teaching rather than its unimportant
-accessory.
+    To a certain degree, education outside the classroom can be regarded as
+    the powerful backup of classroom teaching rather than its unimportant
+    accessory.
 
  1. Steel 使坚强;使坚固 【真题重现】:
 
-Solving questions using our own knowledge and experience or asking other
+    Solving questions using our own knowledge and experience or asking other
 
-people for advice? 【真题运用】:
+    people for advice? 【真题运用】:
 
-The process of probing deeper into a mystery until the result is out
-indeed tests our ability and steels our personalities.
-
-、
+    The process of probing deeper into a mystery until the result is out
+    indeed tests our ability and steels our personalities.
 
 1. Destructive 破坏的;有害的 【真题重现】:
 
-Is it a good method to give the same grade to all the members who do the
+    Is it a good method to give the same grade to all the members who do the
 
-same project together? 【真题运用】:
+    same project together? 【真题运用】:
 
-To some degree, making each one count helps eliminate prejudices and
-undesirable moods that are destructive to the progress and result of the
-project.
+    To some degree, making each one count helps eliminate prejudices and
+    undesirable moods that are destructive to the progress and result of the
+    project.
 
-1. marvel at... 对...感到惊讶;惊叹 【真题重现】: Will people reduce car use
-in 20 years?
+1. marvel at... 对...感到惊讶;惊叹
+    【真题重现】: Will people reduce car use
+    in 20 years?
 
-【真题运用】:
+    【真题运用】:
 
-Tracing back to the past when only the rich were qualified to possess
-private cars, we couldn't help marveling at the historic change such a
-convenient invention brought to people's daily lives.
+    Tracing back to the past when only the rich were qualified to possess
+    private cars, we couldn't help marveling at the historic change such a
+    convenient invention brought to people's daily lives.
 
 1. Alien 外国的 【真题重现】:
 
+    Do people benefit more from traveling in their own country than in a
+    foreign country?
 
+    【真题运用】:
 
-Do people benefit more from traveling in their own country than in a
-foreign country?
+    Paying a visit to an alien nation makes it convenient to have direct
+    contact with
 
-【真题运用】:
-
-Paying a visit to an alien nation makes it convenient to have direct
-contact with
-
-unique customs.
+    unique customs.
 
 1. Motivator 动力;激励因素 【真题重现】:
 
-Choosing a job: one with more vacation time, or one with high paying but
-less vacation time?
+    Choosing a job: one with more vacation time, or one with high paying but
+    less vacation time?
 
-【真题运用】:
+    【真题运用】:
 
-Additionally, freedom is the best motivator for employees to work with
-passion and a good mood, thus enhancing their working efficiency.
+    Additionally, freedom is the best motivator for employees to work with
+    passion and a good mood, thus enhancing their working efficiency.
