优雅处理前端异常

--- a/source/_posts/06-23-优雅的处理前端异常.md
+++ b/source/_posts/06-23-优雅的处理前端异常.md
@@ -192,3 +192,157 @@ window.addEventListener('error', (error)  => {
 
 - 不同浏览器下返回的 error 对象可能不同，需要注意兼容处理。
 - 需要注意避免 addEventListener 重复监听。
+
+##### Promise Catch
+
+在 promise 中使用 catch 可以非常方便的捕获到异步 error ，这个很简单。没有写 catch 的 Promise 中抛出的错误无法被 onerror 或 try-catch 捕获到，所以我们务必要在 Promise 中不要忘记写 catch 处理抛出的异常。
+
+解决方案：为了防止有漏掉的 Promise 异常，建议在全局增加一个对 unhandledrejection 的监听，用来全局监听Uncaught Promise Error。使用方式：
+
+```js
+window.addEventListener("unhandledrejection", function(e){
+    console.log(e);
+})
+```
+
+在增加监听后，我们继续来尝试一下， 不对promis进行catch：
+
+![20200623155345-2020-06-23-15-53-45-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200623155345-2020-06-23-15-53-45-.png)
+
+所以，正如我们上面所说，为了防止有漏掉的 Promise 异常，建议在全局增加一个对 unhandledrejection 的监听，用来全局监听 Uncaught Promise Error。
+
+补充一点：如果去掉控制台的异常显示，需要加上：
+
+```js
+event.preventDefault();
+```
+
+##### 需要注意的是：error boundaries 并不会捕捉下面这些错误
+
+- 事件处理器
+
+- 异步代码
+
+- 服务端的渲染代码
+
+- 在 error boundaries 区域内的错误
+
+我们来举一个小例子，在下面这个 componentDIdCatch(error,info) 里的类会变成一个 error boundary：
+
+![20200623155732-2020-06-23-15-57-33-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200623155732-2020-06-23-15-57-33-.png)
+
+然后我们像使用普通组件那样使用它：
+
+![20200623160215-2020-06-23-16-02-16-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200623160215-2020-06-23-16-02-16-.png)
+
+componentDidCatch() 方法像 JS 的 catch{} 模块一样工作，但是对于组件，只有 class 类型的组件(class component )可以成为一个 error boundaries 。
+
+实际上，大多数情况下我们可以在整个程序中定义一个 error boundary 组件，之后就可以一直使用它了！
+
+##### iframe 异常
+
+对于 iframe 的异常捕获，我们还得借力 window.onerror：
+
+![20200623160339-2020-06-23-16-03-39-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200623160339-2020-06-23-16-03-39-.png)
+
+##### Script error
+
+一般情况，如果出现 Script error 这样的错误，基本上可以确定是出现了跨域问题。这时候，是不会有其他太多辅助信息的，但是解决思路无非如下：
+
+跨源资源共享机制( CORS )：我们为 script 标签添加 crossOrigin 属性。
+
+![20200623160453-2020-06-23-16-04-53-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200623160453-2020-06-23-16-04-53-.png)
+
+或者动态去添加 js 脚本：
+
+![20200623160506-2020-06-23-16-05-06-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200623160506-2020-06-23-16-05-06-.png)
+
+**特别注意，服务器端需要设置：Access-Control-Allow-Origin**
+
+此外，我们也可以试试这个-解决 Script Error 的另类思路：
+
+![20200623160717-2020-06-23-16-07-18-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200623160717-2020-06-23-16-07-18-.png)
+
+简单解释一下：
+
+改写了 EventTarget 的 addEventListener 方法；
+
+对传入的 listener 进行包装，返回包装过的 listener，对其执行进行 try-catch；
+
+浏览器不会对 try-catch 起来的异常进行跨域拦截，所以 catch 到的时候，是有堆栈信息的；
+
+重新 throw 出来异常的时候，执行的是同域代码，所以 window.onerror 捕获的时候不会丢失堆栈信息；
+
+利用包装 addEventListener，我们还可以达到「扩展堆栈」的效果：
+
+![20200623160944-2020-06-23-16-09-44-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200623160944-2020-06-23-16-09-44-.png)
+
+##### 崩溃和卡顿
+
+卡顿也就是网页暂时响应比较慢， JS 可能无法及时执行。但崩溃就不一样了，网页都崩溃了，JS 都不运行了，还有什么办法可以监控网页的崩溃，并将网页崩溃上报呢？
+
+崩溃和卡顿也是不可忽视的，也许会导致你的用户流失。
+
+利用 window 对象的 load 和 beforeunload 事件实现了网页崩溃的监控。
+
+![20200623161031-2020-06-23-16-10-31-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200623161031-2020-06-23-16-10-31-.png)
+
+基于以下原因，我们可以使用 Service Worker 来实现网页崩溃的监控：
+
+- Service Worker 有自己独立的工作线程，与网页区分开，网页崩溃了，Service Worker 一般情况下不会崩溃；
+
+- Service Worker 生命周期一般要比网页还要长，可以用来监控网页的状态；
+
+- 网页可以通过 navigator.serviceWorker.controller.postMessage API 向掌管自己的 SW 发送消息。
+
+##### 错误上报
+
+1. 通过 Ajax 发送数据:
+
+**因为 Ajax 请求本身也有可能会发生异常，而且有可能会引发跨域问题，一般情况下更推荐使用动态创建 img 标签的形式进行上报。**
+
+1. 动态创建 img 标签的形式:
+
+```js
+function report(){
+    let reportUrl = "http://mojito.com/report";
+    new Image().src = `${reportUrl}?logs=${error}`;
+}
+```
+
+收集异常信息量太多，怎么办？实际中，我们不得不考虑这样一种情况：如果你的网站访问量很大，那么一个必然的错误发送的信息就有很多条，这时候，我们需要设置采集率，从而减缓服务器的压力:
+
+```js
+Reporter.send = function(data){
+    // 只采集 30%
+    if(Math.random() < 0.3 ){
+        send(data); // 上报错误
+    }
+}
+```
+
+采集率应该通过实际情况来设定，随机数，或者某些用户特征都是不错的选择。
+
+##### 总结
+
+回到我们开头提出的那个问题，如何优雅的处理异常呢？
+
+1. 可疑区域增加 Try-Catch
+
+1. 全局监控 JS 异常 window.onerror
+
+1. 全局监控静态资源异常 window.addEventListener
+
+1. 捕获没有 Catch 的 Promise 异常：unhandledrejection
+
+1. VUE errorHandler 和 React componentDidCatch
+
+1. 监控网页崩溃：window 对象的 load 和 beforeunload
+
+1. 跨域 crossOrigin 解决
+
+其实很简单，采用组合方案，分类型的去捕获异常，这样基本 80%-90% 的问题都化于无形。
+
+> 原作者：coding小姐姐，
+> 仅对部分内容进行了修改
+> 原文链接：https://segmentfault.com/a/1190000018754274
