--- a/source/_posts/07-14-吉他乐理四-大调和弦.md
+++ b/source/_posts/07-14-吉他乐理四-大调和弦.md
@@ -25,3 +25,47 @@ tags:
 ![20200714174605-2020-07-14-17-46-05-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200714174605-2020-07-14-17-46-05-.png)
 
 ![20200714174625-2020-07-14-17-46-26-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200714174625-2020-07-14-17-46-26-.png)
+
+以上就是各种调的常见和弦图，假如以上你都精通了，可以说你能弹唱80%的歌了！这是不是听起来很美妙？但做起来并没有那么容易~
+
+现在回到C调和弦图
+
+![20200714173936-2020-07-14-17-39-36-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200714173936-2020-07-14-17-39-36-.png)
+
+和弦图上每个都有自己的名字，你看到上面的字母就是它的名字，比如C的名字就是C和弦，Dm的名字就是Dm和弦，对应下方的和弦图。
+
+那么现在继续说和弦，为什么会有不同调的和弦呢？
+
+其实我们任何一首歌都会有属于自己的调调，然后什么调就会主要用哪些和弦。
+
+还记得 1= C 是什么意思么？这个代表这首歌是C调的，所以说这个歌就算我不看谱子，我也知道它大概会用到什么和弦，也就是C调的和弦。
+
+![20200714173936-2020-07-14-17-39-36-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200714173936-2020-07-14-17-39-36-.png)
+
+所以一首歌的调调是什么，可以直接决定会用到什么和弦去弹这个歌！
+
+这时候假如你是一个不喜欢遵守规矩的人，你可能会问我，一首歌是G调的话，我不想用G调的和弦弹，我想用C调的和弦去弹，可不可以啊？
+
+答案是可以的，作为一个弹吉他的，最熟悉的和弦莫不过C调的和弦了，直接用C调去弹其他调的歌，会让我们更加的轻松，自如！
+
+那要怎么去用C调去弹G调的歌呢？最笨的方法就是调音，把每个弦的音调到那个调的音阶，这样你就可以直接用C调和弦了。最聪明的方法就是直接用变调夹去夹品升调！
+
+在场有不知道变调夹是什么的话，请自行百度。
+
+下面看这图：
+
+![20200719235639-2020-07-19-23-56-40-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200719235639-2020-07-19-23-56-40-.png)
+
+看红色框部分，假如一首歌是D调的话，我们像用C调的和弦弹，而不用D调的和弦，那么直接用变调夹夹住2品的位置，就可以了。这时候，你的音阶就是D调的了，不需要调节。
+
+换句话说，夹住2品，可以用C调和弦去弹D调的歌曲了!
+
+其他调同意道理,主要会看这个图就行了.
+
+现在给大家分享下本章的一次小知识吧：
+
+1. 那个变调图中的 #C/bD 这些是什么鬼？
+
+![20200719235727-2020-07-19-23-57-27-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200719235727-2020-07-19-23-57-27-.png)
+
+其实这些是升降音，#是升号，b是降号。两个相邻的音的升降是一个音来的，比如升C和降D，是一样的。所以缩写成 #C/bD （意思是升do或者降re）。还记得我们的音阶图么？
