update 吉他和弦四 - 大调与和弦

--- a/source/_posts/07-14-吉他乐理四-大调和弦.md
+++ b/source/_posts/07-14-吉他乐理四-大调和弦.md
@@ -69,3 +69,43 @@ tags:
 ![20200719235727-2020-07-19-23-57-27-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200719235727-2020-07-19-23-57-27-.png)
 
 其实这些是升降音，#是升号，b是降号。两个相邻的音的升降是一个音来的，比如升C和降D，是一样的。所以缩写成 #C/bD （意思是升do或者降re）。还记得我们的音阶图么？
+
+![20200719235834-2020-07-19-23-58-34-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200719235834-2020-07-19-23-58-34-.png)
+
+有很多空白的地方，其实这些并不是没有音，而是升降音来的。算一个半音，所以严谨上来说是没有降do 和 升mi 的。(但随着深入接触 #mi 其实就是 fa)
+
+假如我们把音乐中的所有音程列出来就是这样的
+
+C #C/bD D #D/bE E F #F/bG G #G/bA A #A/bB B
+1 2 3 4 5 6 7 8 9 10 11 12
+
+刚刚好十二个半音，这个在音乐中也叫十二平均律
+
+1. 一首歌变调后，和弦要怎么换？
+
+这个非常的简单，每个和弦都有级数的，变调后，只有把对应的级数换过来就是了
+
+![20200719235916-2020-07-19-23-59-17-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200719235916-2020-07-19-23-59-17-.png)
+
+比如D调的歌用C调和弦弹，那么原来这个歌的D和弦就要换成C和弦(都是一级和弦)，Em和弦就换成Dm和弦(二级和弦)，其他同理，把对应级数的和弦互换就可以了。
+
+1. 看图变调太麻烦，有没有更方便的方法？
+
+当然有的，其实变调也是可以推导出来的，还是用全音和半音的关系去推导。
+
+比如C调音阶要变D调音阶
+(就是D调的歌用C调和弦弹，夹品只是改变了音阶，千万不要认为是D调变成了C调)
+
+还记得C和D是什么关系吧？全音关系，全音我们推音阶的时候是不是要隔开一个品？
+
+夹品同样道理，隔开1品后，就是直接夹2品的位置，然后2品就是D调的音阶了，这时候就可以直接用C调和弦去弹。
+
+其他变调也一样的方法去推。
+E调转C调，C和E我们说不出什么关系，但我知道D调在2品的话，就从2品开始推！
+D和E是全音，所以2品再隔开一个品就是4品，夹4品就是E调的音阶
+
+最后给大家证实下原理吧，你会发现不可思议：
+
+![20200720000000-2020-07-20-00-00-01-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200720000000-2020-07-20-00-00-01-.png)
+
+图中的红色框的每条弦的音都是和C调空弦音一样的，你会发现实际不同调的音阶，仅仅只是把原来C调的音阶往后移了，所以我们在C调音阶的基础上夹品的话就是把C调音阶往后移了，从而得到我们想要的调调音阶！
