更换所有图片图床访问-使用-jsdelivr加速-CDN加速

--- a/source/_posts/06-06-数学基础.md
+++ b/source/_posts/06-06-数学基础.md
@@ -14,8 +14,8 @@ categories:
 
 1. 数学符号
 
-![数学符号表-维基百科zh.wikipedia.org-2020-06-06-16-31-42-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/%E6%95%B0%E5%AD%A6%E7%AC%A6%E5%8F%B7%E8%A1%A8-%E7%BB%B4%E5%9F%BA%E7%99%BE%E7%A7%91zh.wikipedia.org-2020-06-06-16-31-42-.png)
+![数学符号表-维基百科zh.wikipedia.org-2020-06-06-16-31-42-](https://cdn.jsdelivr.net/gh/catzillaorz/imgcdn/vsc_img/%E6%95%B0%E5%AD%A6%E7%AC%A6%E5%8F%B7%E8%A1%A8-%E7%BB%B4%E5%9F%BA%E7%99%BE%E7%A7%91zh.wikipedia.org-2020-06-06-16-31-42-.png)
 
 1. 用于数学、科学和工程的希腊字母
 
-![20200606163855-2020-06-06-16-38-58-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200606163855-2020-06-06-16-38-58-.png)
+![20200606163855-2020-06-06-16-38-58-](https://cdn.jsdelivr.net/gh/catzillaorz/imgcdn/vsc_img/20200606163855-2020-06-06-16-38-58-.png)
