--- a/source/_posts/12-12-你的容器需要诊断.md
+++ b/source/_posts/12-12-你的容器需要诊断.md
@@ -16,13 +16,13 @@ categories:
 telnet icos-stomp-dit-pass 8080
 ```
 
-![WechatIMG479-2020-12-12-16-37-44-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/WechatIMG479-2020-12-12-16-37-44-.png)
+![WechatIMG479-2020-12-12-16-37-44-](https://cdn.jsdelivr.net/gh/catzillaorz/imgcdn/vsc_img/WechatIMG479-2020-12-12-16-37-44-.png)
 
 1. 片段回放二
 
 - 容器当前网络状态
 
-![WechatIMG481-2020-12-12-16-40-25-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/WechatIMG481-2020-12-12-16-40-25-.png)
+![WechatIMG481-2020-12-12-16-40-25-](https://cdn.jsdelivr.net/gh/catzillaorz/imgcdn/vsc_img/WechatIMG481-2020-12-12-16-40-25-.png)
 
 1. 片段回放三
    - 查看当前容器，已经启动的服务及端口状态，以及网络状态
@@ -31,4 +31,4 @@ telnet icos-stomp-dit-pass 8080
 netstat -anlp
 ```
 
-![WechatIMG483-2020-12-12-16-42-22-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/WechatIMG483-2020-12-12-16-42-22-.png)
+![WechatIMG483-2020-12-12-16-42-22-](https://cdn.jsdelivr.net/gh/catzillaorz/imgcdn/vsc_img/WechatIMG483-2020-12-12-16-42-22-.png)
