--- a/source/_posts/翻墙.md
+++ b/source/_posts/翻墙.md
@@ -12,7 +12,7 @@ date: 2019-09-17 10:56:06
 ###### 最新官方活动-新用户注册送$100（美元）
 
 <a href="https://www.vultr.com/?ref=8267866">点击直达</a>
-<a href="https://www.vultr.com/?ref=8267866"><img src="https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20200510235714-2020-05-10-23-57-15-.png" ></a>
+<a href="https://www.vultr.com/?ref=8267866"><img src="https://cdn.jsdelivr.net/gh/catzillaorz/imgcdn/vsc_img/20200510235714-2020-05-10-23-57-15-.png" ></a>
 
 #### Out of The Great Fire Wall
 <!-- more -->
