--- a/source/_posts/03-01-熵增定律.md
+++ b/source/_posts/03-01-熵增定律.md
@@ -133,3 +133,7 @@ tags:
 ##### 意义是针对参考系而言的
 
 > 对于宇宙而言，人类的存在确实没有意义；但对于人类而言，你的存在就有意义。
+
+## More
+
+[延伸阅读](https://mp.weixin.qq.com/s/6jQ-MuukVekuCzXBuqzF5A)
