--- a/source/_posts/03-03-个人商业画布.md
+++ b/source/_posts/03-03-个人商业画布.md
@@ -2,5 +2,98 @@
 title: 个人商业画布
 date: 2021-03-03 15:31:52
 tags:
+    - 职场规划
 ---
 
+##### 个人商业画布
+
+1. 个人商业画布是怎么来的以及可以做什么？
+1. 个人商业画布中「我拥有什么」知识、技能、能力分别是什么？
+
+###### 个人商业画布是怎么来的以及可以做什么
+
+- 第一，它是从企业商业模式中演变而来，因此，借助它，有利于我们拔高思维高度，去思考策略层面的事情，而不是长久陷在执行层，拘泥于“我到底选哪份工作”、“我能涨多少工资”。
+
+> 当然，不是说这些不重要，只是我们太久困于这些问题，需要偶尔从这些问题中抽离出来，看得更高更远一些。
+> 而个人商业画布就是从企业商业画布演变而来，不仅可以应用到企业，更可以应用到我们个人，它可以上升一个思维高度，思考策略层面的事情，让我们不再纠结于眼下的薪资待遇、我究竟选择哪个公司....让我们更好的规划未来的职业方向，诊断目前的职业状态明确自己的短板和优势。
+
+- 第二，这个画布不仅仅是规划工具，用来想想你将来是什么样子。还可以作为诊断工具来使用，可以诊断你当前的职业状态，来明确有哪些“盲点”可以补充起来，从而为后期的规划奠定基础。
+
+> 很多人在面临职业困境时，都只是在困扰，但从未思考，而这个工具能够帮助你真正思考。
+>
+> 因为时间限制荔枝会结合大家的重灾区问题着重为大家讲讲“我拥有什么”怎么写。
+
+###### 个人商业画布中「我拥有什么」应该是啥
+
+- 我拥有什么，主要包括兴趣、知识、技能、能力。
+
+> 总之，在核心资源这个框内，要尽可能把你有的要素都列出来。这些要素必须能够描述你这个人，能够把你与他人区分开来。
+>
+> 在总结自身资源的时候，你会发现性格与价值观属于内心最深层的一面，它们是需要你不断自我反思，甚至是在发生一些冲突的时候，你才真正体会到。
+> 但对于兴趣、知识、技能、能力这些，我们在盘点它们的时候，其实是有一定技巧的。
+
+![20210303153824-2021-03-03-15-38-26-](https://raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/20210303153824-2021-03-03-15-38-26-.png)
+
+> 像是兴趣，很多同学说喜欢吃、喝、玩，其实荔枝也喜欢，但是仍然还要再强调一下：享受不是兴趣！愿意付出才是兴趣！兴趣跟擅长有关！不过如果实在找不到兴趣点，就先做好眼前的事！
+
+- 那知识是什么？
+
+> 我们来玩一个互动小游戏，假设让你「把一头大象放入冰箱」，你会怎么做呢？
+> 把大象放进冰箱分为三步：
+>
+> 打开冰箱
+>
+> 放入大象
+>
+> 关上冰箱
+>
+> 是的，回答的没错，就是以上三步
+
+- 可以套用上学习也是同个逻辑，我们把过程简化为三步：
+>
+> ①打开大脑
+>
+> ②放入知识
+>
+> ③提取使用
+
+- 大家在写个人商业画布中的“我拥有什么”这个空格里的知识是什么呢？
+
+> 所以可以看得出来，知识很容易盘点，我们在学习和实践中获得的认知和经验，比如运营知识、产品经理知识等等，包括我们现在学习的个人商业画布，都属于知识
+>
+> 技能上你要盘点的是：你会什么本领、掌握多少语言、能用什么工具……不仅包括工作中的，也包括你擅长的业余爱好。为什么要包括业余爱好呢？因为有时候业余爱好跟本职工作结合起来，可能会帮助你发现一些跨领域的新机会。
+>
+> 能力则区别于主要适用某个领域的技能（比如编程），能力更多是指通用能力（比如沟通），盘点能力的方法跟兴趣类似。关于能力的总结，也可以用他人反馈，因为有时候你觉得自己某些能力很强，但别人未必这么认为，所以可以寻求身边同事和朋友的反馈。也可以在网上搜索能力词典，找到能力的清单。你可以从中挑选出自认为不错的能力项，并让身边同事朋友也帮你挑选，对比分析之后，发现你的能力优劣势。
+>
+
+- 但今天和同学们聊了很多，发现大家在画布里“我拥有什么”格子里会写的满满当当,但依然迷茫着、无力着，以下问题：
+
+1. 正在找工作，感觉有点难，也非常迷茫，不知道自己适合什么岗位，如何更好的精进自己的综合能力，个人核心竞争力是什么？稀里糊涂就随便进了一家公司，没有目标和方向
+1. 工作几年后，职业瓶颈，达到能力天花板，纠结转行还是换公司，每天忙于疲惫，但又重复做着相同的事情，不会团队协作，缺失对上对下管理能力
+1. 所学的学习能力和技能是适用于一家公司，跳不出圈子，年纪不如年轻人，想换个环境都不知道自己可以干什么
+
+- 我想给大家讲一个之前同事琳琳的故事，来帮助大家拆解问题【为什么学习了知识，不能很好地应用出来？】
+
+  - ①可能陷入了“知识收藏家”的陷阱
+  - ②可能知识与问题完全脱节，分别储存，导致没有办法快速调取知识处理问题
+
+> 所以，你会发现，单纯的知识储备，如果不能结合思维能力去解决一些具体问题，将很难提升你的市场价值的。
+> 但是积累了大量知识，是否有帮助你解决问题，得到自己想要的呢？如果没有的话，一定要重视起来啦！
+>
+> 这可能是由于花了大量碎片化时间，累积了信息与知识，但没有进行总结与训练内化，只是把信息堆在脑子里面，在数据库里堆积了很多东西，等你想要用某个知识解决问题时，你需要花大量时间搜索和考虑如何做，导致在时间紧迫的情况下，根本无法应用上。
+>
+> 而导致这样现象最重要原因是：缺失了思维能力——结构化思维的整理，将知识、思维内化成能力。
+>
+> 能力，或叫基石能力，比如学习和思考能力、人际交往能力等。相对知识和技能来说，能力高低并不是一眼就能看出来的。一个人的创新能力到底如何，很难用一个证书、几道题目来考察。
+
+- conclusion
+
+> 举个例子，评价一个人智慧高低的标准也不是看他的知识拥有量，而要看他的思维能力如何，所以知识跟思维，是有差别的。思维是一种能力，是一种用知识解释以及解决问题的能力。体现在他处理问题的行为上。
+>
+> 最后，能力跟知识技能最大的区别在于：知识和技能属于特定领域，而能力则更多是通用领域的。比如，知识会分财务、人力资源、金融等等，但是“创新”这样的能力，是适用于任何领域的，一旦掌握，是能够迁移的。
+>
+> 那么，如果能力不匹配，在工作中会如何呢？工作效率、沟通效率较低，面对复杂的问题无从下手，缺乏成就感，力不从心。
+>
+> 相信小伙伴们一定是具有一定冰山模型下的基石能力的，只不过平常没有重视起来，导致现在断层了，只要在知群学习，通过正确地方法与路径，可以避免成长的路上少走弯路，实现弯道超车的
+>
+> 希望大家可以再思考下，自己拥有哪些能力？又应该增长哪些能力呢？
