--- a/source/_posts/03-03-知群短期体验课程总结.md
+++ b/source/_posts/03-03-知群短期体验课程总结.md
@@ -47,6 +47,6 @@ tags:
 
 ##### 学习收获、未来的展望、对知群小伙伴们想说的话
 
-单单是一周的体验课，就已经干货满满，对于一个从来没有认真规划，甚至不知道如何规划的职场人来说，实在是收获颇丰。在我看来，这次体验课也是一场职场洗礼，清楚的认识到自己的不足，也看到了自己与其他人的查询，也意识到如何去改进，如何用正确的方法去改进，甚至做到弯道超车。总的来说，知群真的是行业里的一股清流，不仅改变了底层‘打工人’的认知，也为职场人士提供了再次成长的渠道。
+单单是一周的体验课，就已经干货满满，对于一个从来没有认真规划，甚至不知道如何规划的职场人来说，实在是收获颇丰。在我看来，这次体验课也是一场职场洗礼，清楚的认识到自己的不足，也看到了自己与其他人的差距，也意识到如何去改进，如何用正确的方法去改进，甚至做到弯道超车。总的来说，知群真的是行业里的一股清流，不仅改变了底层‘打工人’的认知，也为职场人士提供了再次成长的渠道。
 
 对于未来，希望大家都能更上一层楼，找到自己的不足，弥补不足并不断挑战和超越自己，希望自己在未来两个多月的职场大课，能坚持学习，取得长足进步，未来升职加薪，非常幸运能遇到知群。
